Code review, correct font-size of close/minimize button of commonDialogWindow
Signed-off-by: Melanie Retter <melanie.retter@bosch-si.com>